<resources>
    <string name="app_name">My Application</string>
    <string name="defaultStatus">\???</string>
    <string name="serviceStatus">Service Status:</string>
    <string name="lastResult">Last result:</string>
    <string name="lastAlert">Last alert:</string>
    <string name="running">Running!</string>
    <string name="stopped">Stopped!</string>
    <string name="startAtBoot">Start service at boot?</string>
    <string name="serverURL">http://iotlab.telecomnancy.eu:8080/iotlab/rest/data/1/light1/last</string>
    <string name="lastMeasurement">Last Measurement:</string>
    <string name="timeLastMeasurement">Time of Last Measurement</string>
    <string name="channel_name">Lamp status</string>
    <string name="channel_description">Notifications for lamp status changes</string>



    <!-- Liste des heures visibles dans les menus déroulants -->
    <string-array name="hour_entries">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </string-array>

    <!-- Valeurs internes associées aux heures (elles seront enregistrées) -->
    <array name="hour_values">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
    </array>
</resources>